--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 <body>
 
+
+
     <div class="container">
         <!-- navigation-bar -->
 
@@ -35,7 +37,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>
-                        We Are <span>The Techy Pandas</span> <br>We Build Efficient Digital <br>Solutions🚀
+                        We Are <span>WappStudio</span> <br>We Build Efficient Digital <br>Solutions🚀
                     </h1>
 
                     <h4 class="mb-3">
@@ -64,6 +66,12 @@
                 <img style="margin-left: 25px;" src="/images/logo-1.png" alt="" srcset="">
                 <img style="margin-left: 25px;" src="/images/star.png" alt="" srcset="">
                 <img style="margin-left: 25px;" src="/images/logo-2.png" alt="" srcset="">
+                <img style="margin-left: 25px;" src="/images/star.png" alt="" srcset="">
+                <img style="margin-left: 25px;" src="/images/logo-3.png" alt="" srcset="">
+                <img style="margin-left: 25px;" src="/images/star.png" alt="" srcset="">
+                <img style="margin-left: 25px;" src="/images/logo-3.png" alt="" srcset="">
+                <img style="margin-left: 25px;" src="/images/star.png" alt="" srcset="">
+                <img style="margin-left: 25px;" src="/images/logo-3.png" alt="" srcset="">
                 <img style="margin-left: 25px;" src="/images/star.png" alt="" srcset="">
                 <img style="margin-left: 25px;" src="/images/logo-3.png" alt="" srcset="">
                 <img style="margin-left: 25px;" src="/images/star.png" alt="" srcset="">
@@ -122,6 +130,8 @@
 
 <!-- service-cards ends -->
 
+<!-- case-study-section -->
+
     <div class="container-fluid wrapper" style="background-color: #222222;">
         <div class="case-study-section container">
             <div class="title-text mb-3" style="border-bottom: 1px solid #353434;color: #fff;">
@@ -135,10 +145,11 @@
                     <div class="card m-3" style="background-color: #FFEDAF; ">
                         <img src="/images/case-study-img.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
-                          <h4 class="card-title">Flights Channel</h4>
+                          <h4 class="card-title">Urban Monkey</h4>
                         </div>
                         <div class="card-footer">
-                          <button class="btn default-btn case-btn">Web Development</button>
+                          <button class="btn case-btn">Web Development</button>
+                          <button class="btn case-btn">UI Design</button>
                           <a href="#"><img src="/images/arrow-small-right 3.svg" alt=""></a>
                         </div>
                     </div>
@@ -146,10 +157,11 @@
                     <div class="card m-3" style="background-color: #ADFAD5;">
                         <img src="/images/case-study-img.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
-                          <h4 class="card-title">Flights Channel</h4>
+                          <h4 class="card-title">KFC Pvt Ltd</h4>
                         </div>
                         <div class="card-footer">
-                          <button class="btn default-btn case-btn">Web Development</button>
+                          <button class="btn case-btn">Web Development</button>
+                          <button class="btn case-btn">UI Design</button>
                           <a href="#"><img src="/images/arrow-small-right 3.svg" alt=""></a>
                         </div>
                     </div>
@@ -162,10 +174,11 @@
                     <div class="card m-3" style="background-color: #EFD0FF;">
                         <img src="/images/case-study-img.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
-                          <h4 class="card-title">Flights Channel</h4>
+                          <h4 class="card-title">Classmate</h4>
                         </div>
                         <div class="card-footer">
-                          <button class="btn default-btn case-btn">Web Development</button>
+                          <button class="btn case-btn">Web Development</button>
+                          <button class="btn case-btn">UI Design</button>
                           <a href="#"><img src="/images/arrow-small-right 3.svg" alt=""></a>
                         </div>
                     </div>
@@ -173,21 +186,25 @@
                     <div class="card m-3" style="background-color: #FDD;">
                         <img src="/images/case-study-img.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
-                          <h4 class="card-title">Flights Channel</h4>
+                          <h4 class="card-title">Airtel</h4>
                         </div>
                         <div class="card-footer">
-                          <button class="btn default-btn case-btn">Web Development</button>
+                          <button class="btn case-btn">Web Development</button>
+                          <button class="btn case-btn">UI Design</button>
                           <a href="#"><img src="/images/arrow-small-right 3.svg" alt=""></a>
                         </div>
                     </div>
-
                 </div>
             </div>
-
-
+            <a href="#" class="d-flex justify-content-center"><button class="btn default-btn mt-4">View More Projects</button></a>
         </div>
     </div>
 
+    <!-- case-study-section ends-->
+
+    <div class="cursor"></div>
+    <!-- Custom script -->
+    <script src="/js/script.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
@@ -195,5 +212,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
         integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    
 </body>
 </html>
