started-testimonial-section

--- a/index.html
+++ b/index.html
@@ -199,6 +199,18 @@
 
     <!-- case-study-section ends-->
 
+    <div class="container wrapper">
+        <div class="testimonial">
+            <div class="row">
+                <div class="col-md-4 p-4">
+                    <h2>Testimonial</h2>
+                    <p class="sub-head">Make automates your business routine so you can focus on reaching results, faster</p>
+                </div>
+                <div class="col-md-8"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="cursor"></div>
     <!-- Custom script -->
     <script src="/js/script.js"></script>
