added-more-section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="row" style="border-bottom: 1px solid #2E2E2E;">
                 <div class="col-md-12 d-flex">
-                    <div class="card m-3" style="background-color: #FFEDAF; ">
+                    <div class="card m-3" style="background-color: #ffedaf; ">
                         <img src="/images/case-study-img.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
                           <h4 class="card-title">Urban Monkey</h4>
@@ -199,15 +199,69 @@
 
     <!-- case-study-section ends-->
 
-    <div class="container wrapper">
-        <div class="testimonial">
+    <!-- testimonial-section -->
+
+    <div class="container testimonial" style="padding: 50px 0;">
             <div class="row">
-                <div class="col-md-4 p-4">
-                    <h2>Testimonial</h2>
-                    <p class="sub-head">Make automates your business routine so you can focus on reaching results, faster</p>
+                <div class="col-md-5 testimonial-text">
+                    <div class="heading-sticky">
+                        <h4 class="mb-4">Testimonial</h4>
+                        <h2>Don’t believe me? People talk</h2>
+                        <p class="sub-head">Make automates your business routine so you can focus on reaching results, faster</p>
+                        <button class="btn default-btn">Let's talk business</button>
+                    </div>
                 </div>
-                <div class="col-md-8"></div>
+                <div class="col-md-7" style="padding: 50px !important;">
+                    <div class="card" style="width: 38rem; border-radius: 32px; text-align: center;">
+                        <img src="/images/logo.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title mb-4">"I love it. I could probably go into sales for you. I made back the purchase price in just 48 hours!"</h5>
+                            <div class="user-img"></div>
+                            <h5>Idris Marques</h5>
+                            <p class="fs-6 fw-light">Design Coordinator, San Miguel de Allende</p>
+                        </div>
+                    </div>
+
+                    <div class="card" style="width: 38rem; border-radius: 32px; text-align: center;">
+                        <img src="/images/logo.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title mb-4">"I love it. I could probably go into sales for you. I made back the purchase price in just 48 hours!"</h5>
+                            <div class="user-img"></div>
+                            <h5>Idris Marques</h5>
+                            <p class="fs-6 fw-light">Design Coordinator, San Miguel de Allende</p>
+                        </div>
+                    </div>
+
+                    <div class="card" style="width: 38rem; border-radius: 32px; text-align: center;">
+                        <img src="/images/logo.svg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title mb-4">"I love it. I could probably go into sales for you. I made back the purchase price in just 48 hours!"</h5>
+                            <div class="user-img"></div>
+                            <h5>Idris Marques</h5>
+                            <p class="fs-6 fw-light">Design Coordinator, San Miguel de Allende</p>
+                        </div>
+                    </div>
+
+                    
+                </div>
             </div>
+    </div>
+
+        <!-- testimonial-section ends -->
+
+        <!-- form-section -->
+    <div class="cta-form container-fluid wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h2 class="mb-4">Let's bring your brand <br> to the next level🚀</h2>
+
+                </div>
+                <div class="col-md-4">
+                    <img src="/images/emoji-1.png" alt="" srcset="">
+                </div>
+            </div>
+            
         </div>
     </div>
 
