--- a/index.html
+++ b/index.html
@@ -308,6 +308,29 @@
         </div>
     </div>
 
+    <div class="footer wrapper">
+        <div class="container">
+            <div class="footer-logo">
+                <img src="/images/tp_logo.png" alt="">
+            </div>
+
+            <div class="footer-col row">
+                <div class="col-md-4 p-4">
+                    <p class="text-light">We deliver enterprise-grade web publishing and digital commerce using latest tech stacks.</p>
+
+                    <div class="social-icons">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="cursor"></div>
     <!-- Custom script -->
     <script src="/js/script.js"></script>
