--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
     <!-- bootstrap links -->
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+
+    <!-- wow-css animation-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
 <body>
@@ -35,7 +39,7 @@
         <div class="hero-section wrapper">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>
+                    <h1 class="animate__backInDown">
                         We Are <span>WappStudio</span> <br />We Build Efficient Digital
                         <br />Solutions🚀
                     </h1>
@@ -310,23 +314,20 @@
 
     <div class="footer wrapper">
         <div class="container">
-            <div class="footer-logo">
-                <img src="/images/tp_logo.png" alt="">
-            </div>
-
-            <div class="footer-col row">
-                <div class="col-md-4 p-4">
-                    <p class="text-light">We deliver enterprise-grade web publishing and digital commerce using latest tech stacks.</p>
-
-                    <div class="social-icons">
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-linkedin-in"></i>
-                    </div>
+            <div class="footer-top row">
+                <div class="footer-logo col-md-8">
+                    <img src="/images/tp_logo.png" alt="">
+                    <p class="text-light w-100">We deliver enterprise-grade web publishing and digital commerce using latest
+                        tech stacks.</p>
                 </div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
-                <div class="col-md-4"></div>
+                <div class="col-md-4 social-icons">
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-linkedin"></i>
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-twitter-x"></i>
+                    <i class="bi bi-whatsapp"></i>
+                    <i class="bi bi-envelope"></i>
+                </div>
             </div>
         </div>
     </div>
@@ -336,6 +337,7 @@
     <script src="/js/script.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <!-- jquery-link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
