--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png" />
 
     <!-- bootstrap links -->
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- wow-css animation-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-light" style="background-color: transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="/images/techypanda_logo.png" alt="" width="66px" height="40px"
+                    <img src="images/techypanda_logo.png" alt="" width="66px" height="40px"
                         class="d-inline-block align-text-top" />
                 </a>
             </div>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img style="max-width: 100%" src="/images/hero-side-image.png" alt="" srcset="" />
+                    <img style="max-width: 100%" src="images/hero-side-image.png" alt="" srcset="" />
                 </div>
             </div>
         </div>
@@ -70,18 +70,18 @@
 
     <marquee behavior="" direction="right" width="100%" style="background-color: #222222; height: 75px">
         <div class="marquee-tag" style="margin-top: 15px">
-            <img style="margin-left: 25px" src="/images/logo-1.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/star.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/logo-2.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/star.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/logo-3.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/star.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/logo-3.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/star.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/logo-3.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/star.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/logo-3.png" alt="" srcset="" />
-            <img style="margin-left: 25px" src="/images/star.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/logo-1.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/star.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/logo-2.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/star.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/logo-3.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/star.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/logo-3.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/star.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/logo-3.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/star.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/logo-3.png" alt="" srcset="" />
+            <img style="margin-left: 25px" src="images/star.png" alt="" srcset="" />
         </div>
     </marquee>
 
@@ -96,7 +96,7 @@
                     </p>
                 </div>
 
-                <img style="max-width: 10%; margin-bottom: 10px" src="/images/handshake-icon.png" alt="" srcset="" />
+                <img style="max-width: 10%; margin-bottom: 10px" src="images/handshake-icon.png" alt="" srcset="" />
             </div>
 
             <!-- service-cards -->
@@ -113,7 +113,7 @@
                         </div>
                         <div class="card-footer" style="background: transparent; border: none">
                             <a href="#" class="card-link">Get Started
-                                <img src="/images/arrow-small-right 3.svg" alt="" srcset="" /></a>
+                                <img src="images/arrow-small-right 3.svg" alt="" srcset="" /></a>
                         </div>
                     </div>
 
@@ -127,7 +127,7 @@
                         </div>
                         <div class="card-footer" style="background: transparent; border: none">
                             <a href="#" class="card-link">Get Started
-                                <img src="/images/arrow-small-right 3.svg" alt="" srcset="" /></a>
+                                <img src="images/arrow-small-right 3.svg" alt="" srcset="" /></a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                                 love launch a. <br />Website from scratch!
                             </p>
                             <a href="#" class="card-link">Get Started
-                                <img src="/images/arrow-small-right 3.svg" alt="" srcset="" /></a>
+                                <img src="images/arrow-small-right 3.svg" alt="" srcset="" /></a>
                         </div>
                     </div>
                 </div>
@@ -164,26 +164,26 @@
             <div class="row" style="border-bottom: 1px solid #2e2e2e">
                 <div class="col-md-12 d-flex">
                     <div class="card m-3" style="background-color: #ffedaf">
-                        <img src="/images/case-study-img.png" class="card-img-top p-3" alt="..." />
+                        <img src="images/case-study-img.png" class="card-img-top p-3" alt="..." />
                         <div class="card-body">
                             <h4 class="card-title">Urban Monkey</h4>
                         </div>
                         <div class="card-footer">
                             <button class="btn case-btn">Web Development</button>
                             <button class="btn case-btn">UI Design</button>
-                            <a href="#"><img src="/images/arrow-small-right 3.svg" alt="" /></a>
+                            <a href="#"><img src="images/arrow-small-right 3.svg" alt="" /></a>
                         </div>
                     </div>
 
                     <div class="card m-3" style="background-color: #adfad5">
-                        <img src="/images/case-study-img.png" class="card-img-top p-3" alt="..." />
+                        <img src="images/case-study-img.png" class="card-img-top p-3" alt="..." />
                         <div class="card-body">
                             <h4 class="card-title">KFC Pvt Ltd</h4>
                         </div>
                         <div class="card-footer">
                             <button class="btn case-btn">Web Development</button>
                             <button class="btn case-btn">UI Design</button>
-                            <a href="#"><img src="/images/arrow-small-right 3.svg" alt="" /></a>
+                            <a href="#"><img src="images/arrow-small-right 3.svg" alt="" /></a>
                         </div>
                     </div>
                 </div>
@@ -192,26 +192,26 @@
             <div class="row">
                 <div class="col-md-12 d-flex">
                     <div class="card m-3" style="background-color: #efd0ff">
-                        <img src="/images/case-study-img.png" class="card-img-top p-3" alt="..." />
+                        <img src="images/case-study-img.png" class="card-img-top p-3" alt="..." />
                         <div class="card-body">
                             <h4 class="card-title">Classmate</h4>
                         </div>
                         <div class="card-footer">
                             <button class="btn case-btn">Web Development</button>
                             <button class="btn case-btn">UI Design</button>
-                            <a href="#"><img src="/images/arrow-small-right 3.svg" alt="" /></a>
+                            <a href="#"><img src="images/arrow-small-right 3.svg" alt="" /></a>
                         </div>
                     </div>
 
                     <div class="card m-3" style="background-color: #fdd">
-                        <img src="/images/case-study-img.png" class="card-img-top p-3" alt="..." />
+                        <img src="images/case-study-img.png" class="card-img-top p-3" alt="..." />
                         <div class="card-body">
                             <h4 class="card-title">Airtel</h4>
                         </div>
                         <div class="card-footer">
                             <button class="btn case-btn">Web Development</button>
                             <button class="btn case-btn">UI Design</button>
-                            <a href="#"><img src="/images/arrow-small-right 3.svg" alt="" /></a>
+                            <a href="#"><img src="images/arrow-small-right 3.svg" alt="" /></a>
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
             </div>
             <div class="col-md-7" style="padding: 50px !important">
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
-                    <img src="/images/logo.svg" class="card-img-top" alt="..." />
+                    <img src="images/logo.svg" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title mb-4">
                             "I love it. I could probably go into sales for you. I made back
@@ -255,7 +255,7 @@
                 </div>
 
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
-                    <img src="/images/logo.svg" class="card-img-top" alt="..." />
+                    <img src="images/logo.svg" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title mb-4">
                             "I love it. I could probably go into sales for you. I made back
@@ -270,7 +270,7 @@
                 </div>
 
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
-                    <img src="/images/logo.svg" class="card-img-top" alt="..." />
+                    <img src="images/logo.svg" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title mb-4">
                             "I love it. I could probably go into sales for you. I made back
@@ -294,7 +294,7 @@
         <div class="form-group">
             <h2>
                 Let's bring your brand <br />
-                to the next level <span><img style="max-width: 120px;" src="/images/emoji-1.png" alt=""
+                to the next level <span><img style="max-width: 120px;" src="images/emoji-1.png" alt=""
                         srcset="" /></span>
             </h2>
 
@@ -316,7 +316,7 @@
         <div class="container">
             <div class="footer-top row">
                 <div class="footer-logo col-md-8">
-                    <img src="/images/tp_logo.png" alt="">
+                    <img src="images/tp_logo.png" alt="">
                     <p class="text-light w-100">We deliver enterprise-grade web publishing and digital commerce using latest
                         tech stacks.</p>
                 </div>
@@ -334,9 +334,9 @@
 
     <div class="cursor"></div>
     <!-- Custom script -->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <!-- Bootstrap JavaScript -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 
     <!-- jquery-link -->
