--- a/index.html
+++ b/index.html
@@ -30,8 +30,19 @@
                     <img src="images/techypanda_logo.png" alt="" width="66px" height="40px"
                         class="d-inline-block align-text-top" />
                 </a>
+
+                <a href="#"><i class="bi bi-list menu-icon"></i></a>
             </div>
         </nav>
+
+        <div class="open-menu">
+            <div class="row">
+                <div class="col-md-4">
+                    
+                </div>
+                <div class="col-md-8"></div>
+            </div>
+        </div>
 
         <!-- navigation-bar -->
 
