--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar navbar-light" style="background-color: transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/techypanda_logo.png" alt="" width="66px" height="40px"
+                    <img src="images/logo.svg" alt="" width="220px" height="48px"
                         class="d-inline-block align-text-top" />
                 </a>
 
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1 class="animate__backInDown">
-                        We Are <span>WappStudio</span> <br />We Build Efficient Digital
+                        We Are <span>TechyPandas</span> <br />We Build Efficient Digital
                         <br />Solutions🚀
                     </h1>
 
@@ -65,16 +65,18 @@
 
                     <!-- email-btn -->
 
-                    <div class="input-group mb-3">
+                    <!-- <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Enter email" aria-label="Enter email"
                             aria-describedby="button-addon2" />
-                        <button class="btn black-btn" type="button" id="button-addon2">
-                            Get Started
-                        </button>
-                    </div>
+                        
+                    </div> -->
+
+                    <button class="btn black-btn" type="button" id="button-addon2">
+                        Get Started
+                    </button>
                 </div>
                 <div class="col-md-4">
-                    <img style="max-width: 100%" src="images/hero-side-image.png" alt="" srcset="" />
+                    <img style="max-width: 100%" src="images/hero-l-img.svg" alt="" srcset="" />
                 </div>
             </div>
         </div>
@@ -239,7 +241,7 @@
 
     <!-- testimonial-section -->
 
-    <div class="container testimonial" style="padding: 50px 0">
+    <div class="container testimonial">
         <div class="row">
             <div class="col-md-5 testimonial-text">
                 <div class="heading-sticky">
@@ -304,11 +306,10 @@
     <!-- testimonial-section ends -->
 
     <!-- form-section -->
-    <div class="cta-form container-fluid wrapper">
+    <div class="cta-form container wrapper">
         <div class="form-group">
             <h2>
-                Let's bring your brand <br />
-                to the next level <span><img style="max-width: 120px;" src="images/emoji-1.png" alt=""
+                Let's talk business<span><img style="max-width: 80px;" src="images/emoji-1.png" alt=""
                         srcset="" /></span>
             </h2>
 
@@ -319,14 +320,14 @@
             </div>
             <div class="d-flex justify-content-evenly">
                 <input class="form-control m-2" type="email" placeholder="Email" aria-label="default input example" />
-                <button class="btn m-2 default-btn">
+                <button class="btn m-2 default-btn" style="border: none;">
                     Submit
                 </button>
             </div>
         </div>
     </div>
 
-    <div class="footer wrapper">
+    <div class="footer pt-5">
         <div class="container">
             <div class="footer-top row">
                 <div class="footer-logo col-md-8">
@@ -343,10 +344,13 @@
                     <i class="bi bi-envelope"></i>
                 </div>
             </div>
+            <div class="copyright d-flex pt-3">
+                <p>Copyright © 2023 All Rights Reserved</p>
+            </div>
         </div>
     </div>
 
-    <div class="cursor"></div>
+    <!-- <div class="cursor"></div> -->
     <!-- Custom script -->
     <script src="js/script.js"></script>
     <!-- Bootstrap JavaScript -->
