--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- wow-css animation-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -27,22 +28,34 @@
         <nav class="navbar navbar-light" style="background-color: transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo.svg" alt="" width="220px" height="48px"
+                    <img src="images/techypanda_icon.svg" alt="" style="max-width: 150px;"
                         class="d-inline-block align-text-top" />
                 </a>
-
-                <a  data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop" href="#"><i class="bi bi-list menu-icon"></i></a>
+                <a data-bs-toggle="offcanvas" href="#menu_offcanvas" role="button" aria-controls="menu_offcanvas"><i class="bi bi-list menu-icon"></i></a>
             </div>
         </nav>
-
-          <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
+          
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="menu_offcanvas" aria-labelledby="menu_offcanvas">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="staticBackdropLabel">Offcanvas</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <img src="images/tp_logo.svg" alt="" width="180px" height="48px"
+                class="d-inline-block align-text-top" />
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label=""></button>
             </div>
             <div class="offcanvas-body">
-              <div>
-                I will not close if you click outside of me.
+              <div class="row">
+                <div class="col-md-6 contact-info">
+                    <div>
+                        <h4>Get in touch</h4>
+                        <p>hello@techypandas.com</p>
+                        <p>+91 9319476620</p>
+                    </div>
+                </div>
+                <div class="col-md-6 nav-opt d-grid">
+                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">Contact Us</a>
+                </div>
               </div>
             </div>
           </div>
@@ -76,7 +89,7 @@
                     </button>
                 </div>
                 <div class="col-md-4">
-                    <img style="max-width: 100%" src="images/hero-l-img.svg" alt="" srcset="" />
+                    <img style="max-width: 100%" src="images/hero-side-image-2.png" alt="" srcset="" />
                 </div>
             </div>
         </div>
@@ -171,13 +184,13 @@
     <div class="container-fluid wrapper" style="background-color: #222222">
         <div class="case-study-section container">
             <div class="title-text mb-3" style="border-bottom: 1px solid #353434; color: #fff">
-                <h2>Our case Studies</h2>
+                <h2>Our Portfolio</h2>
                 <p>
                     Make automates your business routine so you <br />can focus on
                     reaching results, faster
                 </p>
             </div>
-            <div class="row" style="border-bottom: 1px solid #2e2e2e">
+            <div class="row case-study-section-card" style="border-bottom: 1px solid #2e2e2e">
                 <div class="col-md-12 d-flex">
                     <div class="card m-3" style="background-color: #ffedaf">
                         <img src="images/case-study-img.png" class="card-img-top p-3" alt="..." />
@@ -205,7 +218,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row case-study-section-card">
                 <div class="col-md-12 d-flex">
                     <div class="card m-3" style="background-color: #efd0ff">
                         <img src="images/case-study-img.png" class="card-img-top p-3" alt="..." />
@@ -254,7 +267,7 @@
                     <button class="btn default-btn">Let's talk business</button>
                 </div>
             </div>
-            <div class="col-md-7" style="padding: 50px !important">
+            <div class="col-md-7 testimonial-card" style="padding: 50px">
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
                     <img src="images/logo.svg" class="card-img-top" alt="..." />
                     <div class="card-body">
