--- a/index.html
+++ b/index.html
@@ -67,13 +67,11 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1 class="animate__backInDown">
-                        We Are <span>TechyPandas</span> <br />We Build Efficient Digital
-                        <br />Solutions🚀
+                        We Are <span>TechyPandas</span> <br />We Build Efficient Web Solutions🚀
                     </h1>
 
                     <h4 class="mb-3">
-                        Make automates your business routine so you <br />can focus on
-                        reaching results, faster
+                        Crafting Digital Success: Elevate Your Brand with Expert Website Development
                     </h4>
 
                     <!-- email-btn -->
@@ -120,8 +118,7 @@
                 <div class="service-text">
                     <h2>Services We Provide</h2>
                     <p>
-                        Make automates your business routine so you <br />can focus on
-                        reaching results, faster
+                        Elevate your brand with our tailored website solutions, ensuring seamless digital experiences from design to deployment.
                     </p>
                 </div>
 
@@ -135,9 +132,8 @@
                     <div class="card mb-3">
                         <div class="card-body">
                             <h4 class="card-title">UI/UX design</h4>
-                            <p class="card-text text-muted">
-                                Website design? Dashboard Design. <br />We care all of it. We
-                                love launch a. <br />Website from scratch!
+                            <p class="card-text">
+                                Transforming visions into intuitive <br>and captivating user experiences <br>through innovative UI/UX design.
                             </p>
                         </div>
                         <div class="card-footer" style="background: transparent; border: none">
@@ -149,7 +145,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Web Development</h4>
-                            <p class="card-text text-muted">
+                            <p class="card-text">
                                 Website design? Dashboard Design. <br />We care all of it. We
                                 love launch a. <br />Website from scratch!
                             </p>
@@ -164,9 +160,8 @@
                     <div class="card mb-3">
                         <div class="card-body">
                             <h4 class="card-title">Digital Marketing</h4>
-                            <p class="card-text text-muted">
-                                Website design? Dashboard Design. <br />We care all of it. We
-                                love launch a. <br />Website from scratch!
+                            <p class="card-text">
+                                Drive growth and reach your audience effectively with our comprehensive digital marketing strategies.
                             </p>
                             <a href="#" class="card-link">Get Started
                                 <img src="images/arrow-small-right 3.svg" alt="" srcset="" /></a>
@@ -186,8 +181,7 @@
             <div class="title-text mb-3" style="border-bottom: 1px solid #353434; color: #fff">
                 <h2>Our Portfolio</h2>
                 <p>
-                    Make automates your business routine so you <br />can focus on
-                    reaching results, faster
+                    Explore our portfolio showcasing innovative websites that embody our expertise in crafting compelling online experiences.
                 </p>
             </div>
             <div class="row case-study-section-card" style="border-bottom: 1px solid #2e2e2e">
@@ -261,54 +255,49 @@
                     <h4 class="mb-4">Testimonial</h4>
                     <h2>Don’t believe me? People talk</h2>
                     <p class="sub-head">
-                        Make automates your business routine so you can focus on reaching
-                        results, faster
+                        Our team's expertise transformed your vision into a stunning website.
                     </p>
                     <button class="btn default-btn">Let's talk business</button>
                 </div>
             </div>
             <div class="col-md-7 testimonial-card" style="padding: 50px">
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
-                    <img src="images/logo.svg" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title mb-4">
-                            "I love it. I could probably go into sales for you. I made back
-                            the purchase price in just 48 hours!"
+                            Outstanding service! The team at TechyPandas Website Solutions transformed our online presence.
                         </h5>
-                        <div class="user-img"></div>
-                        <h5>Idris Marques</h5>
+                        <!-- <div class="user-img"></div> -->
+                        <h5>Emily Johnson</h5>
                         <p class="fs-6 fw-light">
-                            Design Coordinator, San Miguel de Allende
+                            Marketing Manager, New York
                         </p>
                     </div>
                 </div>
 
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
-                    <img src="images/logo.svg" class="card-img-top" alt="..." />
+                   
                     <div class="card-body">
                         <h5 class="card-title mb-4">
-                            "I love it. I could probably go into sales for you. I made back
-                            the purchase price in just 48 hours!"
+                            Impressive work! Web Development team exceeded our expectations with their innovative approach.
                         </h5>
-                        <div class="user-img"></div>
-                        <h5>Idris Marques</h5>
+                        <!-- <div class="user-img"></div> -->
+                        <h5>David Martinez</h5>
                         <p class="fs-6 fw-light">
-                            Design Coordinator, San Miguel de Allende
+                            CEO, London
                         </p>
                     </div>
                 </div>
 
                 <div class="card" style="width: 38rem; border-radius: 32px; text-align: center">
-                    <img src="images/logo.svg" class="card-img-top" alt="..." />
+                   
                     <div class="card-body">
                         <h5 class="card-title mb-4">
-                            "I love it. I could probably go into sales for you. I made back
-                            the purchase price in just 48 hours!"
+                            Highly recommended! Digital Agency delivered a stellar website that truly reflects our brand.
                         </h5>
-                        <div class="user-img"></div>
-                        <h5>Idris Marques</h5>
+                        <!-- <div class="user-img"></div> -->
+                        <h5>Sarah Thompson</h5>
                         <p class="fs-6 fw-light">
-                            Design Coordinator, San Miguel de Allende
+                            Creative Director, Sydney
                         </p>
                     </div>
                 </div>
